--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -415,7 +415,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="serif"
+                android:fontFamily="sans-serif-light"
                 android:padding="8dp"
                 app:selectedTextColor="@color/white"
                 app:text="YES"
@@ -426,7 +426,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="serif"
+                android:fontFamily="sans-serif-light"
                 android:padding="8dp"
                 app:selectedTextColor="@color/white"
                 app:text="Maybe"
@@ -437,7 +437,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="serif"
+                android:fontFamily="sans-serif-light"
                 android:padding="8dp"
                 app:selectedTextColor="@color/white"
                 app:text="NO"
