Add TODO to make better tests after done with implementation

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -330,6 +330,7 @@
 
         </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
 
+        <!--TODO Remove me and make a proper test-->
         <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
             android:id="@+id/buttonGroup_darthVader"
             android:layout_width="match_parent"
