Finished implementing a partially cleaning up the features
Now documentation, testing and then we're good!!!

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -342,6 +342,8 @@
             app:radius="2dp"
             app:rippleColor="@color/white"
             app:selectedButtonRadius="32dp"
+            app:selectedBorderWidth="2dp"
+            app:selectedBorderColor="@color/red"
             app:selectedBackground="@color/white"
             app:selectionAnimationDuration="1000"
             app:selectionAnimationInterpolator="fastOutSlowIn">
