Switch to android:background from app:background
Allows to hardcode a color (e.g. #FFFFFF) which app:background does NOT allow for some reason.

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:elevation="2dp"
-                app:background="@drawable/gradient_drawable"
+                android:background="@drawable/gradient_drawable"
                 app:divider="@drawable/gradient_drawable_divider"
                 app:dividerPadding="10dp"
                 app:dividerRadius="10dp"
@@ -94,7 +94,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
             android:elevation="2dp"
-            app:background="@color/white"
+            android:background="#FFFFFF"
             app:borderColor="@color/orange_700"
             app:borderWidth="1dp"
             app:divider="@color/orange_700"
@@ -149,7 +149,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:elevation="2dp"
-            app:background="@color/red_700"
+            android:background="@color/red_700"
             app:borderColor="@color/black"
             app:borderWidth="1dp"
             app:divider="@color/black"
@@ -219,7 +219,7 @@
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:elevation="2dp"
-                app:background="@color/white"
+                android:background="@color/white"
                 app:borderColor="@color/black"
                 app:borderWidth="1dp"
                 app:divider="@color/black"
@@ -256,7 +256,7 @@
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:elevation="2dp"
-                app:background="@color/white"
+                android:background="@color/white"
                 app:divider="@color/yellow_600"
                 app:dividerWidth="2dp"
                 app:position="0"
@@ -288,7 +288,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
             android:elevation="2dp"
-            app:background="@color/red_400"
+            android:background="@color/red_400"
             app:divider="@color/white"
             app:dividerPadding="10dp"
             app:dividerRadius="10dp"
@@ -336,7 +336,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:elevation="2dp"
-            app:background="@color/black"
+            android:background="@color/black"
             app:position="2"
             app:radius="2dp"
             app:rippleColor="@color/white"
@@ -401,7 +401,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:elevation="2dp"
-            app:background="@color/white"
+            android:background="@color/white"
             app:borderColor="@color/black"
             app:borderWidth="1dp"
             app:draggable="true"
@@ -461,7 +461,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:elevation="2dp"
-            app:background="@color/black"
+            android:background="@color/black"
             app:position="0"
             app:radius="2dp"
             app:rippleColor="@color/white"
@@ -500,7 +500,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:elevation="3dp"
-            app:background="@color/white"
+            android:background="@color/white"
             app:position="0"
             app:radius="20dp"
             app:ripple="true"
@@ -512,7 +512,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:padding="4dp"
-                app:background="@color/red_100"
+                android:background="@color/red_100"
                 app:selectedTextColor="@color/white"
                 app:text="Both"
                 app:textColor="@color/red" />
@@ -522,7 +522,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:padding="8dp"
-                app:background="@color/green_100"
+                android:background="@color/green_100"
                 app:selectedTextColor="@color/white"
                 app:text="Pickup"
                 app:textColor="@color/black" />
@@ -532,7 +532,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:padding="4dp"
-                app:background="@color/blue_100"
+                android:background="@color/blue_100"
                 app:selectedTextColor="@color/white"
                 app:text="Dropoff"
                 app:textColor="@color/black" />
@@ -546,7 +546,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
             android:elevation="2dp"
-            app:background="@color/red_400"
+            android:background="@color/red_400"
             app:divider="@color/white"
             app:dividerPadding="10dp"
             app:dividerRadius="10dp"
@@ -585,7 +585,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:elevation="2dp"
-            app:background="@color/white"
+            android:background="@color/white"
             app:position="0"
             app:radius="30dp"
             app:rippleColor="@color/black"
@@ -623,7 +623,7 @@
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-light"
                 android:padding="8dp"
-                app:selectedTextColor="@color/white"
+                app:selectedTextColor="#FFFFFF"
                 app:text="No"
                 app:textColor="@color/black"
                 app:textSize="24sp" />
