Implement showing and hiding buttons
Functionality is already there but there was bugs in it so it would not look correct.

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -315,6 +316,7 @@
                 android:layout_weight="2"
                 android:paddingBottom="6dp"
                 android:paddingLeft="45dp"
+                android:visibility="gone"
                 android:paddingRight="45dp"
                 android:paddingTop="6dp"
                 app:drawable="@drawable/ic_b9" />
@@ -367,7 +369,8 @@
                 android:layout_weight="2"
                 app:drawable="@drawable/ic_b7"
                 app:drawableTint="@color/white"
-                app:selectedDrawableTint="@color/black" />
+                app:selectedDrawableTint="@color/black"
+                tools:visibility="gone" />
 
             <com.addisonelliott.segmentedbutton.SegmentedButton
                 android:layout_width="0dp"
@@ -431,6 +434,7 @@
                 android:padding="8dp"
                 app:selectedTextColor="@color/white"
                 app:text="Maybe"
+                android:visibility="gone"
                 app:textColor="@color/black"
                 app:textSize="24sp" />
 
@@ -616,7 +620,8 @@
                 app:selectedTextColor="@color/white"
                 app:text="Maybe"
                 app:textColor="@color/black"
-                app:textSize="24sp" />
+                app:textSize="24sp"
+                tools:visibility="gone" />
 
             <com.addisonelliott.segmentedbutton.SegmentedButton
                 android:layout_width="0dp"
