Reverted bottom margin to 60dp

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -690,7 +690,10 @@
             android:id="@+id/buttonGroup_vectorDrawable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="60dp"
             android:weightSum="3"
             app:draggable="true"
             app:selectedBackground="@color/indigo_800"
