Added support for VectorDrawable (#19)
Added checking drawable type in SegmentedButton. If the drawable is Vector, it will be converted into a bitmap. This allows to handle drawable tint/selected tint properly.

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -637,10 +637,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="60dp"
+            android:layout_margin="4dp"
             app:radius="30dp"
             app:selectedButtonRadius="30dp"
             app:selectedBackground="@color/blue_500"
@@ -687,6 +684,74 @@
                 app:text="Button 4"
                 app:textColor="@color/black"
                 app:textSize="20sp" />
+
+        </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
+
+        <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
+            android:id="@+id/buttonGroup_vectorDrawable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="60dp"
+            android:weightSum="3"
+            app:draggable="true"
+            app:selectedBackground="@color/indigo_800"
+            app:borderWidth="1dp"
+            app:borderColor="@color/indigo_800"
+            app:radius="12dp"
+            app:ripple="true"
+            app:rippleColor="@color/indigo_800"
+            >
+
+            <com.addisonelliott.segmentedbutton.SegmentedButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="10dp"
+                app:textColor="@color/indigo_800"
+                app:selectedTextColor="@color/white"
+                app:text="Bar"
+                app:textSize="18sp"
+                app:drawable="@drawable/ic_chart_bar"
+                app:drawableTint="@color/indigo_800"
+                app:selectedDrawableTint="@color/white"
+                app:drawableGravity="top"
+                app:drawablePadding="4dp"
+                />
+
+            <com.addisonelliott.segmentedbutton.SegmentedButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="10dp"
+                app:textColor="@color/indigo_800"
+                app:selectedTextColor="@color/white"
+                app:text="Pie"
+                app:textSize="18sp"
+                app:drawable="@drawable/ic_chart_pie"
+                app:drawableTint="@color/indigo_800"
+                app:selectedDrawableTint="@color/white"
+                app:drawableGravity="top"
+                app:drawablePadding="4dp"
+                />
+
+            <com.addisonelliott.segmentedbutton.SegmentedButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="10dp"
+                app:textColor="@color/indigo_800"
+                app:selectedTextColor="@color/white"
+                app:text="Donut"
+                app:textSize="18sp"
+                app:drawable="@drawable/ic_chart_donut"
+                app:drawableTint="@color/indigo_800"
+                app:selectedDrawableTint="@color/white"
+                app:drawableGravity="top"
+                app:drawablePadding="4dp"
+                />
 
         </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
     </LinearLayout>
